<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseSound">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/soundCancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RadioButton
            android:id="@+id/soundButton1"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_weight="1"
            android:text="@string/sound_1" />
        <RadioButton
            android:id="@+id/soundButton2"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_weight="1"
            android:text="@string/sound_2" />
        <RadioButton
            android:id="@+id/soundButton3"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_weight="1"
            android:text="@string/sound_3" />
        <RadioButton
            android:id="@+id/soundButton4"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_weight="1"
            android:text="@string/sound_4" />
        <RadioButton
            android:id="@+id/soundButton5"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_weight="1"
            android:text="@string/sound_5" />
    </RadioGroup>

    <Button
        android:id="@+id/soundCancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/cancel"
        android:onClick="soundOnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/soundOkButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/soundOkButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ok"
        android:onClick="soundOnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/soundCancelButton" />
</android.support.constraint.ConstraintLayout>